--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,42 @@
   box-sizing: border-box;
 }
 
+.logoBox {
+  overflow: hidden;
+  .slider {
+    animation: slidein 20s linear infinite;
+    white-space: nowrap;
+    .logos {
+      width: 20%;
+
+      margin: 0px 0;
+      .fab {
+        /* width: calc(100% / 4); */
+        width: 100%;
+        animation: fade-in 0.1s cubic-bezier(0.455, 0.03, 0.515, 0.955) forwards;
+      }
+    }
+  }
+}
+
+@keyframes slidein {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 body {
   background: url("/assets/bg.png");
   background-size: cover;
