--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,25 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Metal+Mania&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=VT323&display=swap");
-
-.defcon {
-  font-family: "Roboto Mono", monospace;
-  font-optical-sizing: auto;
-  font-weight: normal;
-  font-style: normal;
-}
-.VT {
-  font-family: "VT323", monospace;
-  font-style: normal;
-}
-
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary: hsl(39, 100%, 77%);
 }
+
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
@@ -64,14 +49,6 @@
   background: #555;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 * {
   box-sizing: border-box;
 }
@@ -112,17 +89,16 @@
   }
 }
 
-body {
-  background: url("/assets/bg.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  /* background-blend-mode:screen; */
-  background-color: black;
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.hero-polygon {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 40%, 0% 100%);
+}
+
+.hero-polygon img {
+  clip-path: polygon(0 1.5%, 100% 1.5%, 100% 8.7%, 0 24.3%);
 }
