--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,3 +102,21 @@
 .hero-polygon img {
   clip-path: polygon(0 1.5%, 100% 1.5%, 100% 8.7%, 0 24.3%);
 }
+
+.polygon-wrapper {
+  position: relative;
+  width: 100%;
+  height: 320px;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 40%, 0% 100%);
+}
+
+.polygon-image {
+  width: 100%;
+  height: 100%;
+  background-image: url("/assets/images/red.jpg"); /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  clip-path: inherit;
+  border: 5px solid black;
+  box-shadow: 0 0 0 5px black;
+}
